[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://InfoBars.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/hole_stick.png" type="Texture" id=7]
[ext_resource path="res://art/hole.png" type="Texture" id=8]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="BackGround" type="ColorRect" parent="."]
show_behind_parent = true
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="Level" type="Sprite" parent="."]
position = Vector2( 256, 0 )
centered = false

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 560, 520 )
z_index = 1

[node name="InfoBars" parent="." instance=ExtResource( 6 )]

[node name="AfterTurnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HoleMarker" type="Sprite" parent="."]
position = Vector2( 641, 149 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( 0, -16 )

[node name="Hole" type="Sprite" parent="."]
visible = false
texture = ExtResource( 8 )

[node name="NextLevelTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[connection signal="hit" from="InfoBars" to="." method="_on_InfoBars_hit"]
[connection signal="swingStart" from="InfoBars" to="." method="_on_InfoBars_swingStart"]
[connection signal="timeout" from="AfterTurnTimer" to="." method="next_turn"]
[connection signal="timeout" from="NextLevelTimer" to="." method="next_level"]
